css animations on msc

--- a/misc/misc.html
+++ b/misc/misc.html
@@ -29,17 +29,66 @@
 
 			<div class="grid">
 				<div class="col-3">
-					<a href="samurai.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/samurai.jpg')"></div></a>
-					<a href="wingedcanvas.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg')"></div></a>
-					<a href="yrpc.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/yrpc.jpg')"></div></a>
+					<a href="samurai.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/samurai.jpg'); animation-delay: 0.1s;">
+							<div class="overlay">
+								<div class="hovertext">Samurai</div>
+								<div class="hoversubtext">Illustration</div>
+							</div>
+						</div>
+					</a>
+					<a href="wingedcanvas.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg'); animation-delay: 0.7s;">
+							<div class="overlay">
+								<div class="hovertext">Winged Canvas</div>
+								<div class="hoversubtext">Illustration, Graphic Design</div>
+							</div>
+						</div>
+					</a>
+					<a href="yrpc.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/yrpc.jpg'); animation-delay: 1.3s;">
+							<div class="overlay">
+								<div class="hovertext">The YRPC</div>
+								<div class="hoversubtext">Graphic Design</div>
+							</div>
+						</div>
+					</a>
 				</div>
 				<div class="col-3">
-					<a href="hawkeye.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg')"></div></a>
-					<a href="arthub.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/arthubbox.jpg')"></div></a>
+					<a href="hawkeye.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg'); animation-delay: 0.3s;">
+							<div class="overlay">
+								<div class="hovertext">Hawkeye Studios</div>
+								<div class="hoversubtext">Branding, Motion Graphics</div>
+							</div>
+						</div>
+					</a>
+					<a href="arthub.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/arthubbox.jpg'); animation-delay: 0.9s;">
+							<div class="overlay">
+								<div class="hovertext">The ArtHub</div>
+								<div class="hoversubtext">Branding, Graphic Design</div>
+							</div>
+						</div>
+					</a>
 				</div>
 				<div class="col-3 last">
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/bomberbox.jpg')"></div></a>
-					<a href="thenetwork.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/networkbox.jpg')"></div></a>
+					<a href="#" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/bomberbox.jpg'); cursor: default; animation-delay: 0.5s;">
+							<div class="overlay">
+								<div class="hovertext">The Bombshelter Pub Rebrand</div>
+								<div class="hoversubtext">WIP - Coming soon</div>
+							</div>
+						</div>
+					</a>
+					<a href="thenetwork.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/networkbox.jpg'); animation-delay: 1.1s;">
+							<div class="overlay">
+								<div class="hovertext">The Network</div>
+								<div class="hoversubtext">Editorial Design</div>
+							</div>
+						</div>
+					</a>
 				</div>
 			</div>
 			
