--- a/photography/photography.html
+++ b/photography/photography.html
@@ -26,7 +26,7 @@
 
 			<div class="construction">
 				<h1 class="construct-text">This page is under construction.</h1>
-				<h3 class="construction-subtext">Please check back later. In the mean time check out my <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a>. :)</h3>
+				<h3 class="construction-subtext">Please check back later. In the mean time check out my <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a> and <a href="https://www.500px.com/jefferyyli/" class="person" target=_blank>500px</a>. :)</h3>
 			</div>
 			
 			<!-- Footer -->
