--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
 				<div class="about-right">
 					<p style="margin-top: 0">Hey, I'm Jeffery Li and I'm a designer. I've previously worked at <a href="https://www.rbcroyalbank.com/personal.html" class="person" target=_blank>RBC</a> as a Visual Designer Intern and I'm currently studying Global Business and Digital Arts at the University of Waterloo. Outside of school, I'm also a designer on <a href="http://hackthenorth.com/" class="person" target=_blank>Hack the North</a>, Canada's biggest hackathon. In my spare time, I like to go out to shoot photography and film in the city and would love to one day travel the world.</p>
 					<p>If you're interested in working together or have any business inquiries, feel free to contact me through <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>email</a> or through any of my social media channels.</p>
+					<a href="assets/documents/jeffery_resume.pdf" class="document" target=_blank>Resume</a>
 				</div>
 			</div>
 
