--- a/design/dailyui.html
+++ b/design/dailyui.html
@@ -40,12 +40,12 @@
 
 			<h4 class="section-title">Day 1 - Sign Up</h4>
 			<p>Today I learned how to (kind of) use Origami Studio. It took a while but Day 1's prompt helped me build a basic understanding of how to use this program.</p>
-			<iframe width="100%" height="475px" src="https://www.youtube.com/embed/iVPtlKPWM0A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<video width="100%" height="475px" no-controls autoplay loop><source src="../assets/images/design/dailyui/day001.mov"></video>
 
 			<div class="break">•       •       •</div>
 
 			<h4 class="section-title">Day 2 - Credit Card Checkout</h4>
-			<iframe src="https://www.youtube.com/embed/WXgepdTBAag?ecver=2" width="100%" height="475px" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+			<video width="100%" height="475px" no-controls autoplay loop><source src="../assets/images/design/dailyui/day002.mov"></video>
 
 		</div>
 		
