--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="herocontainer">
 				<h1 class="hero-title">Jeffery Li</h1>
 				<h3 class="hero-subtitle">designer</h3>
-				<p class="hero-para">Hey there! I’m a designer currently studying at the University of Waterloo. My interests lie in solving design problems and creating beautiful experiences for people.</p>
+				<p class="hero-para">Hey there! I’m a designer currently studying at the University of Waterloo. My interests lie in solving design problems and creating beautiful experiences for people. I'm currently looking to join an awesome team for Summer 2018!</p>
 				<div class="hero-icons">
 					<a href="https://www.instagram.com/jefferyyli/" target=_blank><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
 					<a href="https://500px.com/jefferyyli" target=_blank><i class="fa fa-500px fa-lg" aria-hidden="true"></i></a>
@@ -41,33 +41,33 @@
 			<!-- Work -->
 
 			<div class="work-container">
-				<div class="work">
-					<div class="homecontainer">
-						<a class="projectPicBox" href="design/rbcpathway.html"><div class="home-img" style="background-image:url('assets/images/design/rbc/rbc-home.png')"></div></a>
-						<h3 class="work-title">RBC Pathway</h3>
-						<h4 class="project-type">UI/UX Design</h4>
-						<p class="project-info">A new tool for UX designers and researchers at RBC Royal Bank.</p>
-					</div>
-					<div class="homecontainer">
-						<a class="projectPicBox" href="design/HTNmobileapp.html"><div class="home-img" style="background-image:url('assets/images/design/HTN-mobile/HTN-logo.jpg')"></div></a>
-						<h3 class="work-title">Hack the North Mobile App</h3>
-						<h4 class="project-type">Product Design</h4>
-						<p class="project-info">Redesigning a mobile app for the largest hackathon in Canada.</p>
-					</div>
+				<div class="work-block" style="animation-delay: 0.3s">
+					<div class="home-imgblock" style="background-image:url('assets/images/design/dailyui/dailyui-home.jpg'); opacity: 0.8;"></div>
+					<h3 class="work-title">100 Days of UI</h3>
+					<h4 class="project-type">Visual Design, Interaction Design</h4>
+					<p class="project-info">A journey in becoming a better visual and interaction designer (in progress).</p>
+					<a href="design/dailyui.html" class="button-link"><button class="home-button">View Project</button></a>
 				</div>
-				<div class="work">
-					<div class="homecontainer">
-						<a class="projectPicBox" href="design/clearspider.html"><div class="home-img" style="background-image:url('assets/images/design/clearspider/Clearspider_Mockup.jpg')"></div></a>
-						<h3 class="work-title">ClearSpider UI/UX Redesign</h3>
-						<h4 class="project-type">UI/UX Design</h4>
-						<p class="project-info">Redesigning a cloud-based inventory management system in 48 hours.</p>
-					</div>
-					<div class="homecontainer">
-						<a class="projectPicBox" href="design/hackthethrone.html""><div class="home-img" style="background-image:url('assets/images/design/HTT/HTT-logo.jpg')"></div></a>
-						<h3 class="work-title">Hack the Throne Website</h3>
-						<h4 class="project-type">Web Design</h4>
-						<p class="project-info">The greatest hackathon that never happened.</p>
-					</div>
+				<div class="work-block" style="animation-delay: 0.6s">
+					<div class="home-imgblock" style="background-image:url('assets/images/design/rbc/banner.png')"></div>
+					<h3 class="work-title">RBC Pathway</h3>
+					<h4 class="project-type">UI/UX Design, User Research, Design Thinking</h4>
+					<p class="project-info">A new tool for UX designers and researchers at RBC Royal Bank.</p>
+					<a href="design/rbcpathway.html" class="button-link"><button class="home-button">View Case</button></a>
+				</div>
+				<div class="work-block" style="animation-delay: 0.9s">
+					<div class="home-imgblock" style="background-image:url('assets/images/design/HTN-mobile/banner.png')"></div>
+					<h3 class="work-title" style="color: white">Hack The North Mobile App</h3>
+					<h4 class="project-type" style="color: white">UI/UX Design</h4>
+					<p class="project-info" style="color: white">Redesigning the visual and user experience of the mobile app for the largest hackathon in Canada.</p>
+					<a href="design/HTNmobileapp.html" class="button-link"><button class="home-button">View Case</button></a>
+				</div>
+				<div class="work-block" style="animation-delay: 1.2s">
+					<div class="home-imgblock" style="background-image:url('assets/images/design/clearspider/banner.png')"></div>
+					<h3 class="work-title">Clear Spider Redesign</h3>
+					<h4 class="project-type">UI/UX Design</h4>
+					<p class="project-info">Redesigning a cloud-based inventory management system in 48 hours.</p>
+					<a href="design/clearspider.html" class="button-link"><button class="home-button">View Case</button></a>
 				</div>
 			</div>
 
