--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
 					<h3 class="work-title">RBC Pathway</h3>
 					<h4 class="project-type">UI/UX Design, User Research, Design Thinking</h4>
 					<p class="project-info">A new tool for UX designers and researchers at RBC Royal Bank.</p>
-					<a href="design/rbcpathway.html" class="button-link"><button class="home-button">View Case</button></a>
+					<a href="design/rbcpathway.html" class="button-link"><button class="home-button">View Case Study</button></a>
 				</div>
 				<div class="work-block" style="animation-delay: 0.9s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/HTN-mobile/banner.png')"></div>
 					<h3 class="work-title" style="color: white">Hack The North Mobile App</h3>
 					<h4 class="project-type" style="color: white">UI/UX Design</h4>
 					<p class="project-info" style="color: white">Redesigning the visual and user experience of the mobile app for the largest hackathon in Canada.</p>
-					<a href="design/HTNmobileapp.html" class="button-link"><button class="home-button">View Case</button></a>
+					<a href="design/HTNmobileapp.html" class="button-link"><button class="home-button">View Case Study</button></a>
 				</div>
 				<div class="work-block" style="animation-delay: 1.2s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/clearspider/banner.png')"></div>
 					<h3 class="work-title">Clear Spider Redesign</h3>
 					<h4 class="project-type">UI/UX Design</h4>
 					<p class="project-info">Redesigning a cloud-based inventory management system in 48 hours.</p>
-					<a href="design/clearspider.html" class="button-link"><button class="home-button">View Case</button></a>
+					<a href="design/clearspider.html" class="button-link"><button class="home-button">View Case Study</button></a>
 				</div>
 			</div>
 
