--- a/misc/misc.html
+++ b/misc/misc.html
@@ -37,6 +37,14 @@
 							</div>
 						</div>
 					</a>
+					<a href="#" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/bomberbox.jpg'); cursor: default; animation-delay: 0.5s;">
+							<div class="overlay">
+								<div class="hovertext">The Bombshelter Pub Rebrand</div>
+								<div class="hoversubtext">WIP - Coming soon</div>
+							</div>
+						</div>
+					</a>
 					<a href="wingedcanvas.html" class="projectPicBox">
 						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg'); animation-delay: 0.7s;">
 							<div class="overlay">
@@ -55,6 +63,13 @@
 					</a>
 				</div>
 				<div class="col-3">
+					<a href="hackthethrone.html" class="projectPicBox">
+						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/HTT/HTT-logo.jpg'); animation-delay: 0.3s;">
+							<div class="overlay">
+								<div class="hovertext">Hack the Throne</div>
+								<div class="hoversubtext">Web Design, Branding</div>
+							</div>
+						</div>
 					<a href="hawkeye.html" class="projectPicBox">
 						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg'); animation-delay: 0.3s;">
 							<div class="overlay">
@@ -68,16 +83,6 @@
 							<div class="overlay">
 								<div class="hovertext">The ArtHub</div>
 								<div class="hoversubtext">Branding, Graphic Design</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-3 last">
-					<a href="#" class="projectPicBox">
-						<div class="misc-img" style="background-image: url('../assets/images/graphic_design/bomberbox.jpg'); cursor: default; animation-delay: 0.5s;">
-							<div class="overlay">
-								<div class="hovertext">The Bombshelter Pub Rebrand</div>
-								<div class="hoversubtext">WIP - Coming soon</div>
 							</div>
 						</div>
 					</a>
