--- a/misc/hawkeye.html
+++ b/misc/hawkeye.html
@@ -29,7 +29,7 @@
 
 			<div class="projnav">
 				<div class="projnavleft">
-					<a class="arrownav" href="samurai.html"><i class="arrowleft"></i>    Samurai</a>
+					<a class="arrownav" href="hackthethrone.html"><i class="arrowleft"></i>    Hack the Throne</a>
 				</div>
 				<div class="projnavright">
 					<a class="arrownav" href="wingedcanvas.html">Winged Canvas   <i class="arrowright"></i></a>
