--- a/misc/samurai.html
+++ b/misc/samurai.html
@@ -32,7 +32,7 @@
 					<a class="arrownav" href="yrpc.html"><i class="arrowleft"></i>    The YRPC</a>
 				</div>
 				<div class="projnavright">
-					<a class="arrownav" href="hawkeye.html">Hawkeye Studios   <i class="arrowright"></i></a>
+					<a class="arrownav" href="hackthethrone.html">Hack the Throne   <i class="arrowright"></i></a>
 				</div>
 			</div>
 
