--- a/photography/photography.html
+++ b/photography/photography.html
@@ -28,6 +28,19 @@
 				<h1 class="construct-text">This page is under construction.</h1>
 				<h3 class="construction-subtext">Please check back later. In the mean time check out my <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a> and <a href="https://www.500px.com/jefferyyli/" class="person" target=_blank>500px</a>. :)</h3>
 			</div>
+
+			<!-- <div class="row">
+				<div class="column">
+					<img src=../assets/images/photography/lostintime.jpg>
+				</div>
+				<div class="column">
+					<img src=../assets/images/photography/toronto2.jpg>
+				</div>
+				<div class="column">
+				</div>
+				<div class="column">
+				</div>
+			</div> -->
 			
 			<!-- Footer -->
 
