--- a/design/dailyui.html
+++ b/design/dailyui.html
@@ -46,6 +46,12 @@
 
 			<h4 class="section-title">Day 2 - Credit Card Checkout</h4>
 			<video width="100%" height="475px" no-controls autoplay loop><source src="../assets/images/design/dailyui/day002.mov"></video>
+
+			<div class="break">•       •       •</div>
+
+			<h4 class="section-title">Day 3 - Landing Page</h4>
+			<p>I decided to play around with gradients, shapes and colours to practice my illustration skills. </p>
+			<img src="../assets/images/design/dailyui/day003.png" data-action="zoom">
 		
 		<!-- Footer -->
 
@@ -54,6 +60,9 @@
 			</footer>
 			
 		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script src="../assets/js/scrolltop.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
