--- a/design/HTNmobileapp.html
+++ b/design/HTNmobileapp.html
@@ -32,7 +32,7 @@
 		<div class="banner" style="background-image: url('../assets/images/design/HTN-mobile/HTN-banner.png'); background-color: #1b2828"><body id="top"></div>
 
 		<div class="container">
-			<p class="proj-tags">Product Design</p>
+			<p class="proj-tags">UI/UX Design</p>
 			<p>Hack the North is Canada's largest hackathon held at the University of Waterloo. We bring over 1000 students from over 22 countries to build and create over a period of 36 hours.</p>
 			<p>During the summer, I was given the opportunity to redesign the visual and user experience of the Hack the North 2017 mobile app. I worked with <a class="person" href=https://www.linkedin.com/in/moezbhatti/ target=_blank>Moez Bhatti</a>, who lead the design and development of the mobile app. The mobile app is used for the day-of event and there are many features that would assist the hacker at the event such as live updates, school and building maps, and mentorship. For this redesign, I was mainly in charge of the mentorship feature.</p>
 
