--- a/index.html
+++ b/index.html
@@ -41,18 +41,11 @@
 			<!-- Work -->
 
 			<div class="work-container">
-				<div class="work-block" style="animation-delay: 0.3s">
-					<div class="home-imgblock" style="background-image:url('assets/images/design/dailyui/dailyui-home.jpg'); opacity: 0.8;"></div>
-					<h3 class="work-title">100 Days of UI</h3>
-					<h4 class="project-type">Visual Design, Interaction Design</h4>
-					<p class="project-info">A journey in becoming a better visual and interaction designer (in progress).</p>
-					<a href="design/dailyui.html" class="button-link"><button class="home-button">View Project</button></a>
-				</div>
 				<div class="work-block" style="animation-delay: 0.6s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/rbc/banner.png')"></div>
 					<h3 class="work-title">RBC Pathway</h3>
 					<h4 class="project-type">UI/UX Design, User Research, Design Thinking</h4>
-					<p class="project-info">A new tool for UX designers and researchers at RBC Royal Bank.</p>
+					<p class="project-info">Empowering UX Designers and Researchers to record and share their processes at RBC Royal Bank.</p>
 					<a href="design/rbcpathway.html" class="button-link"><button class="home-button">View Case Study</button></a>
 				</div>
 				<div class="work-block" style="animation-delay: 0.9s">
@@ -61,6 +54,13 @@
 					<h4 class="project-type" style="color: white">UI/UX Design</h4>
 					<p class="project-info" style="color: white">Redesigning the visual and user experience of the mobile app for the largest hackathon in Canada.</p>
 					<a href="design/HTNmobileapp.html" class="button-link"><button class="home-button">View Case Study</button></a>
+				</div>
+				<div class="work-block" style="animation-delay: 0.3s">
+					<div class="home-imgblock" style="background-image:url('assets/images/design/dailyui/dailyui-home.jpg'); opacity: 0.8;"></div>
+					<h3 class="work-title">100 Days of UI</h3>
+					<h4 class="project-type">Visual Design, Interaction Design</h4>
+					<p class="project-info">A journey in becoming a better visual and interaction designer (in progress).</p>
+					<a href="design/dailyui.html" class="button-link"><button class="home-button">View Project</button></a>
 				</div>
 				<div class="work-block" style="animation-delay: 1.2s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/clearspider/banner.png')"></div>
