nav bar changes and rbc trimmed down

--- a/design/HTNmobileapp.html
+++ b/design/HTNmobileapp.html
@@ -16,9 +16,10 @@
 			
 			<nav>
 				<div class="navLeft">
-					<a href="../index.html" class="nav-link-l">jl/design</a>
+					<a href="../index.html" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="../index.html" class="nav-link">work</a>
 					<a href="../misc/misc.html" class="nav-link">misc.</a>
 					<a href="../photography/photography.html" class="nav-link">photography</a>
 					<a href="../about.html" class="nav-link">about</a>
@@ -38,7 +39,7 @@
 
 			<!-- 2016 mobile app -->
 
-			<h4 class="section-title">2016 Mobile App</h4>
+			<h4 class="section-title">Audit</h4>
 			<p>When I was assigned this project, my design lead told me that the user experience of the mobile app can definitely be improved a lot. I started off this project with playing around with the old app and trying to navigate to different features of the app.</p>
 			<h5 class="section-subtitle">Sign-in Flow</h5>
 			<p>The old flow for signing into the account was inefficient as you had to click on the "Sign In" button, enter your hacker email, click on "Next", enter your password, and then click on "Log In". You can log in much faster if you are able to enter your email and password on one screen and then click on one button that says "Login".</p>
