--- a/design/clearspider.html
+++ b/design/clearspider.html
@@ -16,9 +16,10 @@
 			
 			<nav>
 				<div class="navLeft">
-					<a href="../index.html" class="nav-link-l">jl/design</a>
+					<a href="../index.html" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="../index.html" class="nav-link">work</a>
 					<a href="../misc/misc.html" class="nav-link">misc.</a>
 					<a href="../photography/photography.html" class="nav-link">photography</a>
 					<a href="../about.html" class="nav-link">about</a>
@@ -109,7 +110,7 @@
 			<!-- Conclusion -->
 
 			<h4 class="section-title">Conclusion</h4>
-			<p>The Clear Spider redesign was my first UI/UX project I helped designed which has allowed me to experience methods used in the UX process. This project was a month after my User Experience Design class which was great to apply what I've learned in my class. Designing corporate software and redesigning a oversatured and bloated system has allowed me to improve a lot in this field as this was a difficult challenge to tackle.</p>
+			<p>The Clear Spider redesign was my first UI/UX project I helped designed which has allowed me to experience methods used in the UX process. This project was a month after my User Experience Design class which was great to apply what I've learned in my class. Designing enterprise software and redesigning a oversatured and bloated system has allowed me to improve a lot in this field as this was a difficult challenge to tackle.</p>
 			
 
 			<!-- Footer -->
