--- a/misc/misc.html
+++ b/misc/misc.html
@@ -15,14 +15,17 @@
 			
 			<nav>
 				<div class="navLeft">
-					<a href="../index.html" class="nav-link-l">jl/design</a>
+					<a href="../index.html" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="../index.html" class="nav-link">work</a>
 					<a href="#" class="nav-link">misc.</a>
 					<a href="../photography/photography.html" class="nav-link">photography</a>
 					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
+
+
 
 			<h2 class="misc-title">misc.</h2>
 			<h4 class="misc-subtitle">Designs, illustrations, WIPs, and more from the archives.</h4>
