--- a/photography/photography.html
+++ b/photography/photography.html
@@ -15,9 +15,10 @@
 			
 			<nav>
 				<div class="navLeft">
-					<a href="../index.html" class="nav-link-l">jl/design</a>
+					<a href="../index.html" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="../index.html" class="nav-link">work</a>
 					<a href="../misc/misc.html" class="nav-link">misc.</a>
 					<a href="#" class="nav-link">photography</a>
 					<a href="../about.html" class="nav-link">about</a>
