--- a/about.html
+++ b/about.html
@@ -14,10 +14,11 @@
 			<!-- Navigation -->
 			
 			<nav>
-				<div class="navLeft">	
-					<a href="index.html" class="nav-link-l">jl/design</a>
+				<div class="navLeft">
+					<a href="index.html" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="index.html" class="nav-link">work</a>
 					<a href="misc/misc.html" class="nav-link">misc.</a>
 					<a href="photography/photography.html" class="nav-link">photography</a>
 					<a href="#" class="nav-link">about</a>
