--- a/design/dailyui.html
+++ b/design/dailyui.html
@@ -16,9 +16,10 @@
 			
 			<nav>
 				<div class="navLeft">
-					<a href="../index.html" class="nav-link-l">jl/design</a>
+					<a href="../index.html" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="../index.html" class="nav-link">work</a>
 					<a href="../misc/misc.html" class="nav-link">misc.</a>
 					<a href="../photography/photography.html" class="nav-link">photography</a>
 					<a href="../about.html" class="nav-link">about</a>
@@ -35,7 +36,7 @@
 			<p class="proj-tags">Visual Design, Interaction Design</p>
 
 			<p> In an effort to improve my visual design skills and as well as learn some interaction design, I decided to challenge myself by taking on the <a href="http://www.dailyui.co/" class="person" target=_blank>Daily UI Challenge</a>. Daily UI sends the user a design prompt everyday and it is up to the user to intepret the prompt and solution.</p>
-			<p> I also decided to make interactions or animated prototypes on hopefully all of the challenges I take so that I can learn how to use Origami Studio (and possibly other programs) and hone my interaction design skills. This page will be updated every once in a while as I am currently taking on this challenge.</p>
+			<p> I also decided to make interactions or native prototypes on, hopefully, all of the challenges I take so that I can learn how to use Origami Studio (and possibly other programs) and hone my interaction design skills. This page will be updated every once in a while as I am currently taking on this challenge.</p>
 			<p>Wish me luck, hopefully I don't die and give up part way! &#x1F4AA; </p>
 
 			<h4 class="section-title">Day 1 - Sign Up</h4>
