--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 			
 			<nav class="home-nav">
 				<div class="navLeft">
-					<a href="#" class="nav-link-l">jl/design</a>
+					<a href="#" class="nav-link-l">Jeffery Li</a>
 				</div>
 				<div class="navRight">
+					<a href="#" class="nav-link">work</a>
 					<a href="misc/misc.html" class="nav-link">misc.</a>
 					<a href="photography/photography.html" class="nav-link">photography</a>
 					<a href="about.html" class="nav-link">about</a>
