--- a/design/HTNmobileapp.html
+++ b/design/HTNmobileapp.html
@@ -35,12 +35,12 @@
 		<div class="container">
 			<p class="proj-tags">UI/UX Design</p>
 			<p>Hack the North is Canada's largest hackathon held at the University of Waterloo. We bring over 1000 students from over 22 countries to build and create over a period of 36 hours.</p>
-			<p>During the summer, I was given the opportunity to redesign the visual and user experience of the Hack the North 2017 mobile app. I worked with <a class="person" href=https://www.linkedin.com/in/moezbhatti/ target=_blank>Moez Bhatti</a>, who lead the design and development of the mobile app. The mobile app is used for the day-of event and there are many features that would assist the hacker at the event such as live updates, school and building maps, and mentorship. For this redesign, I was mainly in charge of the mentorship feature.</p>
+			<p>During the summer, I was given the opportunity to redesign the visual and user experience of the Hack the North 2017 mobile app. I worked with <a class="person" href=https://www.linkedin.com/in/moezbhatti/ target=_blank>Moez Bhatti</a>, who lead the design and development of the mobile app. The mobile app is used for the day-of event and there are many features that would assist the hacker at the event such as live updates, school and building maps, and mentorship.</p>
 
 			<!-- 2016 mobile app -->
 
 			<h4 class="section-title">Audit</h4>
-			<p>When I was assigned this project, my design lead told me that the user experience of the mobile app can definitely be improved a lot. I started off this project with playing around with the old app and trying to navigate to different features of the app.</p>
+			<p>I started off this project by auditing the 2016 mobile app.</p>
 			<h5 class="section-subtitle">Sign-in Flow</h5>
 			<p>The old flow for signing into the account was inefficient as you had to click on the "Sign In" button, enter your hacker email, click on "Next", enter your password, and then click on "Log In". You can log in much faster if you are able to enter your email and password on one screen and then click on one button that says "Login".</p>
 			<img class="work-pic" src="../assets/images/design/HTN-mobile/2016login.png" alt="2016 Login Flow" data-action="zoom">
