--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 					<p class="project-info">Motivating users to become more environmentally conscious.</p>
 					<a href="design/envapp.html" class="button-link"><button class="home-button">View Project</button></a>
 				</div>
-				<div class="work-block" style="animation-delay: 1.5s">
+<!-- 			<div class="work-block" style="animation-delay: 1.5s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/dailyui/dailyui-home.jpg'); opacity: 0.8;"></div>
 					<h3 class="work-title">100 Days of UI</h3>
 					<h4 class="project-type">Visual Design, Interaction Design</h4>
 					<p class="project-info">A journey in becoming a better visual and interaction designer (in progress).</p>
 					<a href="design/dailyui.html" class="button-link"><button class="home-button">View Project</button></a>
-				</div>
-				<div class="work-block" style="animation-delay: 1.8s">
+				</div> -->
+				<div class="work-block" style="animation-delay: 1.5s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/clearspider/banner.png')"></div>
 					<h3 class="work-title">Clear Spider Redesign</h3>
 					<h4 class="project-type">UI/UX Design</h4>
