home page changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 		<script src="https://use.fontawesome.com/b11ad6d76a.js"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/v4-shims.js"></script>
 	</head>
 
 	<body>
@@ -35,8 +36,10 @@
 				<div class="hero-icons">
 					<a href="https://www.instagram.com/jefferyyli/" target=_blank><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
 					<a href="https://500px.com/jefferyyli" target=_blank><i class="fa fa-500px fa-lg" aria-hidden="true"></i></a>
-					<a href="https://www.behance.net/jeffery-li" target=_blank><i class="fa fa-behance fa-lg" aria-hidden="true"></i></a>
+					<!-- <a href="https://www.behance.net/jeffery-li" target=_blank><i class="fa fa-behance fa-lg" aria-hidden="true"></i></a> -->
 					<a href="https://www.linkedin.com/in/jefferylii/" target=_blank><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+					<a href="assets/documents/jeffery_resume.pdf" target=_blank><i class="fa fa-file fa-lg2" aria-hidden="true"></i></a>
+				</div>
 			</div>
 
 			<!-- Work -->
@@ -53,7 +56,7 @@
 					<div class="home-imgblock" style="background-image:url('assets/images/design/HTN-mobile/banner.png')"></div>
 					<h3 class="work-title" style="color: white">Hack The North Mobile App</h3>
 					<h4 class="project-type" style="color: white">UI/UX Design</h4>
-					<p class="project-info" style="color: white">Redesigning the visual and user experience of the mobile app for the largest hackathon in Canada.</p>
+					<p class="project-info" style="color: white">Redesigning the mobile app for the biggest hackathon in Canada.</p>
 					<a href="design/HTNmobileapp.html" class="button-link"><button class="home-button">View Case Study</button></a>
 				</div>
 				<div class="work-block" style="animation-delay: 1.2s">
