--- a/about.html
+++ b/about.html
@@ -25,12 +25,16 @@
 				</div>
 			</nav>
 
-			<h2 class="misc-title">About</h2>
 			<div class="about-sect">
-				<div class="about-left"></div>
+				<div class="about-left">
+					<div class="about-img"><img src="assets/images/me2.jpg" alt="jeffery li"></div>
+				</div>
 				<div class="about-right">
-					<p style="margin-top: 0">Hey, I'm Jeffery Li and I'm a designer. I've previously worked at <a href="https://www.rbcroyalbank.com/personal.html" class="person" target=_blank>RBC</a> as a Visual Design &amp; UX Intern and I'm currently studying Global Business and Digital Arts at the University of Waterloo. Outside of school, I'm also a designer on <a href="http://hackthenorth.com/" class="person" target=_blank>Hack the North</a>, Canada's biggest hackathon. In my spare time, I like to go out to shoot photography and video in the city and would love to one day travel the world.</p>
-					<p>If you're interested in working together or have any business inquiries, feel free to contact me through <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>email</a> or through any of my social media channels.</p>
+					<h2 class="about">About</h2>
+					<p style="margin-top: 0">Hey there I'm Jeffery, or you can call me Jeff for short! I'm a product designer currently studying Global Business and Digital Arts at the University of Waterloo. I've previously designed at the <a href="https://www.rbcroyalbank.com/personal.html" class="person" target=_blank>Royal Bank of Canada</a> as a Visual &amp; UX Design Intern and I'm also helping build <a href="http://hackthenorth.com/" class="person" target=_blank>Hack the North</a>, Canada's biggest hackathon, as a product designer.</p>
+
+					<p>In my spare time, I like to go out to shoot photography in the city and would love to one day travel the world. You can check out my work on <a href="http://instagram.com/jefferyyli" class="person" target=_blank>Instagram</a> and <a href="http://500px.com/jefferyyli" class="person" target=_blank>500px</a>.</p>
+					<p>If you're interested in working together or have any business inquiries, feel free to contact me <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>here</a>.</p>
 					<a href="assets/documents/jeffery_resume.pdf" class="document" target=_blank>Resume</a>
 				</div>
 			</div>
