--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
+		<script src="https://use.fontawesome.com/b11ad6d76a.js"></script></script>
 	</head>
 
 	<body>
@@ -31,11 +32,11 @@
 				</div>
 				<div class="about-right">
 					<h2 class="about">About</h2>
-					<p style="margin-top: 0">Hey there I'm Jeffery, or you can call me Jeff for short! I'm a product designer currently studying Global Business and Digital Arts at the University of Waterloo. I've previously designed at the <a href="https://www.rbcroyalbank.com/personal.html" class="person" target=_blank>Royal Bank of Canada</a> as a Visual &amp; UX Design Intern and I'm also helping build <a href="http://hackthenorth.com/" class="person" target=_blank>Hack the North</a>, Canada's biggest hackathon, as a product designer.</p>
+					<p style="margin-top: 0">Hey there I'm Jeffery, or you can call me Jeff for short! I'm a product designer currently studying <a href=" https://uwaterloo.ca/future-students/programs/global-business-and-digital-arts" class="person" target=_blank>Global Business and Digital Arts</a> at the University of Waterloo. I've previously designed at the <a href="https://www.rbcroyalbank.com/personal.html" class="person" target=_blank>Royal Bank of Canada</a> as a Visual &amp; UX Design Intern and I'm also helping build <a href="http://hackthenorth.com/" class="person" target=_blank>Hack the North</a>, Canada's biggest hackathon, as a product designer.</p>
 
 					<p>In my spare time, I like to go out to shoot photography in the city and would love to one day travel the world. You can check out my work on <a href="http://instagram.com/jefferyyli" class="person" target=_blank>Instagram</a> and <a href="http://500px.com/jefferyyli" class="person" target=_blank>500px</a>.</p>
 					<p>If you're interested in working together or have any business inquiries, feel free to contact me <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>here</a>.</p>
-					<a href="assets/documents/jeffery_resume.pdf" class="document" target=_blank>Resume</a>
+					<a href="assets/documents/jeffery_resume.pdf" class="document" target=_blank><i class="fa fa-file fa-md" aria-hidden="true"></i>&nbsp; &nbsp; Resume</a>
 				</div>
 			</div>
 
