--- a/photography/photography.html
+++ b/photography/photography.html
@@ -25,30 +25,160 @@
 				</div>
 			</nav>
 
-			<div class="construction">
+			<!-- <div class="construction">
 				<h1 class="construct-text">This page is under construction.</h1>
 				<h3 class="construction-subtext">Please check back later. In the mean time check out my <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a> and <a href="https://www.500px.com/jefferyyli/" class="person" target=_blank>500px</a>. :)</h3>
+			</div> -->
+
+			<h2 class="misc-title">photography</h2>
+			<h4 class="misc-subtitle" id="photog-subtext">Portraits, street, exploration, and much more from my eyes. Follow me on <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a> and <a href="https://www.500px.com/jefferyyli/" class="person" target=_blank>500px</a> to stay updated. [page is still a WIP!]</h4>
+
+		<!-- end container margins -->
+		</div>
+
+			<!-- gallery -->
+
+			<div class="gallery-container">
+
+				<div class="gallery">
+					<div class="gal-img" id="lookup"></div>
+					<!-- <div class="gal-img"><img src="../assets/images/photography/lookup.jpg" class="photog-img" id="lookup"/></div> -->
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="fdr"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="aura"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="timesfoot"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="vivian"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="tobermory"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="paces2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="lostintime"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="aurafeet"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="paces"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="sarah"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="lookdown"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="times-square"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="sarah2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="brooklyn-sunset"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="street"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="yellowcab"></div>
+				</div>
+
+				<!-- <div class="gallery">
+					<div class="gal-img" id="christyblossom"></div>
+				</div> -->
+
+				<!-- <div class="gallery">
+					<div class="gal-img" id="bell"></div>
+				</div> -->
+
+				<div class="gallery">
+					<div class="gal-img" id="sfcity"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="cherryblossom"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="toronto2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="vivian2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="lookdown2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="goldengate"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="nycshore"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="toronto3"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="oculus"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="brooklyn"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="manhattan"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="muroof"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="lookup2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="tobermory2"></div>
+				</div>
+
+				<div class="gallery">
+					<div class="gal-img" id="wloofog"></div>
+				</div>
+
 			</div>
 
-			<!-- <div class="row">
-				<div class="column">
-					<img src=../assets/images/photography/lostintime.jpg>
-				</div>
-				<div class="column">
-					<img src=../assets/images/photography/toronto2.jpg>
-				</div>
-				<div class="column">
-				</div>
-				<div class="column">
-				</div>
-			</div> -->
-			
-			<!-- Footer -->
-
-			<footer>
-				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
-			</footer>
-		</div>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
